# nrm-rs

./: Cargo.toml  README.md
.github/workflows/: lint.yml
src/: cli.rs  config.rs  main.rs  utils.rs
src/commands/: add.rs  current.rs  delete.rs  home.rs  list.rs  mod.rs  rename.rs  scope.rs  show.rs  use.rs
