[package]
name = "nrm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.17", features = ["derive"] }
rust-ini = "0.18.0"
dirs = "4.0.0"
anyhow = "1.0.65"
open = "3.0.3"

[[bin]]
name = "nrm"
path = "src/main.rs"